<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DroidScope</string>

    <string name="refresh">Refresh</string>    
    <string name="refreshing">Refreshing...</string>    

    <string name="trigger">Trigger</string>    
    <string name="triggered">Build triggered.</string>    

    <string name="connection">Set Up Connection</string>    
    <string name="settings">Settings</string>    

    <string name="context_title">Project Actions</string>    

    <string name="settings_pulse_server">Pulse Server</string>
    <string name="settings_pulse_url">Pulse URL</string>
    <string name="settings_username">User Name</string>
    <string name="settings_password">Password</string>
    <string name="settings_behaviour">Behaviour</string>
    <string name="settings_refresh_on_resume">Refresh On Display</string>
    <string name="settings_refresh_on_resume_verbose">Turn on to refresh stale views when they are displayed.</string>
    <string name="settings_stale_age">Stale Age (Secs)</string>
    <string name="settings_stale_age_verbose">Age of a view before it is considered stale.</string>
    
    <string name="project_current_build">build in progress</string>
    <string name="project_completed_build">latest completed build</string>
    <string name="project_unknown">this project does not exist</string>
    <string name="project_never_built">this project has never been built</string>
    <string name="build_id">id</string>
    <string name="build_status">status</string>
    <string name="build_revision">revision</string>
    <string name="build_tests">tests</string>
    <string name="build_when">when</string>
    <string name="build_elapsed">elapsed</string>
    <string name="build_progress">progress</string>
    
    <string name="error">Error</string>    
    <string name="error_settings_incomplete">Your settings are incomplete.</string>
</resources>
