<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/connection_root"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:padding="4dip">
	<TextView
	  android:text="@string/settings_pulse_url"
      android:id="@+id/connection_pulse_url_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingBottom="4dip">
    </TextView>
	<EditText
	  android:id="@+id/connection_pulse_url"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:singleLine="true">
	</EditText>
	<TextView
	  android:text="@string/settings_username"
      android:id="@+id/connection_username_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="6dip"
      android:paddingBottom="4dip">
    </TextView>
	<EditText
	  android:id="@+id/connection_username"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:singleLine="true">
	</EditText>
	<TextView
	  android:text="@string/settings_password"
      android:id="@+id/connection_password_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingTop="6dip"
      android:paddingBottom="4dip">
    </TextView>
	<EditText
	  android:id="@+id/connection_password"
	  android:password="true"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:singleLine="true">
	</EditText>
	<LinearLayout
	  android:layout_height="fill_parent"
	  android:layout_width="fill_parent"
	  android:gravity="center|bottom">
	    <Button
	      android:id="@+id/connection_ok"
	      android:text="@android:string/ok"
	      android:layout_width="150dip"
	      android:layout_height="wrap_content"/>
	</LinearLayout>
</LinearLayout>
